--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
@@ -13,6 +14,7 @@
 
 
     <TextView
+        android:id="@+id/locationT"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:fontFamily="sans-serif"
@@ -24,7 +26,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/timeT"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:fontFamily="sans-serif"
@@ -36,13 +38,13 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/weatherimageT"
         android:layout_width="132dp"
         android:layout_height="95dp"
         app:srcCompat="@android:drawable/ic_delete" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/weatherconditionT"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:fontFamily="sans-serif"
@@ -53,7 +55,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tempratureT"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:fontFamily="sans-serif"
@@ -71,8 +73,7 @@
 
         <Space
             android:layout_width="10dp"
-            android:layout_height="wrap_content">
-        </Space>
+            android:layout_height="wrap_content"></Space>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -108,6 +109,7 @@
             </TextView>
 
             <TextView
+                android:id="@+id/humidityT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -161,7 +163,7 @@
             </TextView>
 
             <TextView
-                android:id="@+id/bp"
+                android:id="@+id/pressureT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -215,7 +217,7 @@
             </TextView>
 
             <TextView
-                android:id="@+id/speed"
+                android:id="@+id/windspeedT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -283,7 +285,7 @@
                 android:textStyle="bold"></TextView>
 
             <TextView
-                android:id="@+id/size"
+                android:id="@+id/uvT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -331,7 +333,7 @@
                 android:textStyle="bold"></TextView>
 
             <TextView
-                android:id="@+id/vis"
+                android:id="@+id/visT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -379,7 +381,7 @@
                 android:textStyle="bold"></TextView>
 
             <TextView
-                android:id="@+id/feels"
+                android:id="@+id/feelsT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -404,7 +406,7 @@
         android:layout_height="10dp"></Space>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/lastupdateT"
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:fontFamily="sans-serif"
