--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -62,16 +62,15 @@
 
             <ImageView
                 android:id="@+id/weatherimageT"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="137dp"
+                android:layout_height="match_parent"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
-                android:paddingBottom="10dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:paddingBottom="10dp" />
 
             <TextView
-                android:id="@+id/temperatureT"
+                android:id="@+id/tempratureT"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -79,8 +78,8 @@
                 android:text="25"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="60sp"
-                android:textStyle="bold" />
+                android:textSize="34sp"
+                android:textStyle="normal" />
 
         </LinearLayout>
 
@@ -144,7 +143,8 @@
                         android:layout_width="169dp"
                         android:layout_height="114dp"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        android:background="#3CF1EBF1"
+                        app:srcCompat="@drawable/humidity" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -197,7 +197,7 @@
                         android:layout_width="172dp"
                         android:layout_height="118dp"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/pressure" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -246,7 +246,7 @@
                         android:layout_width="173dp"
                         android:layout_height="112dp"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/wind" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -304,7 +304,7 @@
                         android:layout_width="165dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/uv" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -353,7 +353,7 @@
                         android:layout_width="169dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/visibility" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -402,7 +402,7 @@
                         android:layout_width="174dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:src="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/feels_like" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
