--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -33,6 +33,7 @@
                 android:textColor="@color/white"
                 android:textSize="34sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -44,7 +45,7 @@
             <TextView
                 android:id="@+id/timeT"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:paddingTop="10dp"
 
                 android:text="Time"
@@ -75,7 +76,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
-                android:text="25"
+                android:text="24°C"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="34sp"
@@ -119,14 +120,17 @@
         android:layout_height="match_parent"
         android:layout_weight=".5"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_margin="10dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_marginRight="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -137,13 +141,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#3CF1EBF1"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="169dp"
-                        android:layout_height="114dp"
+                        android:layout_width="172dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#3CF1EBF1"
+
                         app:srcCompat="@drawable/humidity" />
 
                     <LinearLayout
@@ -155,9 +160,10 @@
                         <TextView
                             android:id="@+id/textView40"
                             android:layout_width="match_parent"
-                            android:layout_height="42dp"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingTop="10dp"
+
+                            android:paddingTop="20dp"
                             android:text="Humidity"
                             android:textAlignment="center"
                             android:textColor="#F8F9FA"
@@ -169,21 +175,30 @@
                             android:layout_width="match_parent"
                             android:layout_height="47dp"
                             android:layout_weight="1"
+
+                            android:paddingTop="20dp"
                             android:text="Size"
                             android:textAlignment="center"
                             android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
+
                     </LinearLayout>
 
 
                 </LinearLayout>
+
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight=".33"
+                android:background="#3CF1EBF1"
                 android:orientation="vertical">
 
 
@@ -192,11 +207,13 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
+
                     <ImageView
                         android:id="@+id/imageView18"
                         android:layout_width="172dp"
-                        android:layout_height="118dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+
                         app:srcCompat="@drawable/pressure" />
 
                     <LinearLayout
@@ -208,9 +225,8 @@
                         <TextView
                             android:id="@+id/textView42"
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
-                            android:paddingTop="15dp"
-                            android:paddingBottom="10dp"
+                            android:layout_height="66dp"
+                            android:paddingTop="20dp"
                             android:text="Pressure"
                             android:textAlignment="center"
                             android:textColor="#FAF8F8"
@@ -221,6 +237,7 @@
                             android:id="@+id/pressureT"
                             android:layout_width="match_parent"
                             android:layout_height="66dp"
+                            android:paddingTop="20dp"
                             android:text="BP"
                             android:textAlignment="center"
                             android:textColor="#FFFFFF"
@@ -228,7 +245,12 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -239,12 +261,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#3CF1EBF1"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView20"
                         android:layout_width="173dp"
-                        android:layout_height="112dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/wind" />
 
@@ -257,7 +280,7 @@
                         <TextView
                             android:id="@+id/textView44"
                             android:layout_width="match_parent"
-                            android:layout_height="54dp"
+                            android:layout_height="59dp"
                             android:paddingTop="15dp"
                             android:text="Wind"
                             android:textAlignment="center"
@@ -269,7 +292,7 @@
                             android:id="@+id/windspeedT"
                             android:layout_width="match_parent"
                             android:layout_height="67dp"
-                            android:paddingTop="10dp"
+                            android:paddingTop="15dp"
                             android:text="Speed"
                             android:textAlignment="center"
                             android:textColor="#FAF9F9"
@@ -279,6 +302,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -286,7 +310,9 @@
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_marginLeft="10dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -297,11 +323,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#3CF1EBF1"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView21"
-                        android:layout_width="165dp"
+                        android:layout_width="170dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/uv" />
@@ -315,8 +342,8 @@
                         <TextView
                             android:id="@+id/textView46"
                             android:layout_width="match_parent"
-                            android:layout_height="63dp"
-                            android:paddingTop="15dp"
+                            android:layout_height="66dp"
+                            android:paddingTop="20dp"
                             android:text="UV"
                             android:textAlignment="center"
                             android:textColor="#F4F1F1"
@@ -327,7 +354,7 @@
                             android:id="@+id/uvT"
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:paddingTop="10dp"
+                            android:paddingTop="20dp"
                             android:text="Size"
                             android:textAlignment="center"
                             android:textColor="#F4F0F0"
@@ -335,12 +362,18 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight=".33"
+                android:background="#3CF1EBF1"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -364,8 +397,8 @@
                         <TextView
                             android:id="@+id/textView48"
                             android:layout_width="match_parent"
-                            android:layout_height="59dp"
-                            android:paddingTop="15dp"
+                            android:layout_height="66dp"
+                            android:paddingTop="20dp"
                             android:text="Visibility"
                             android:textAlignment="center"
                             android:textColor="#F6F3F3"
@@ -376,7 +409,7 @@
                             android:id="@+id/visT"
                             android:layout_width="match_parent"
                             android:layout_height="76dp"
-                            android:paddingTop="10dp"
+                            android:paddingTop="20dp"
                             android:text="BP"
                             android:textAlignment="center"
                             android:textColor="#F4F2F2"
@@ -384,12 +417,18 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight=".34"
+                android:background="#3CF1EBF1"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -399,7 +438,7 @@
 
                     <ImageView
                         android:id="@+id/imageView23"
-                        android:layout_width="174dp"
+                        android:layout_width="169dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/feels_like" />
@@ -413,7 +452,7 @@
                         <TextView
                             android:id="@+id/textView50"
                             android:layout_width="match_parent"
-                            android:layout_height="55dp"
+                            android:layout_height="58dp"
                             android:paddingTop="15dp"
                             android:text="Feels Like"
                             android:textAlignment="center"
@@ -424,8 +463,8 @@
                         <TextView
                             android:id="@+id/feelsT"
                             android:layout_width="match_parent"
-                            android:layout_height="71dp"
-                            android:paddingTop="10dp"
+                            android:layout_height="64dp"
+                            android:paddingTop="15dp"
                             android:text="Speed"
                             android:textAlignment="center"
                             android:textColor="#FBFBFB"
@@ -434,6 +473,13 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".33" />
+
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
