Context Menu Added

--- a/app/src/main/res/values/strings_activity.xml
+++ b/app/src/main/res/values/strings_activity.xml
@@ -6,4 +6,5 @@
     <string name="dialog_title">Unable to fetch details !</string>
     <string name="city_not_found">City Not Available</string>
     <string name="internet_error">Network not available.</string>
+    <string name="refereshing">Refreshing...</string>
 </resources>
