--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -6,5 +6,5 @@
         android:angle="90"
         android:startColor="#9561a1"
         android:endColor="#122259"
-        android:type="linear"></gradient>
+        android:type="linear"/>
 </shape>
