--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingTop="5dp"
+    android:paddingTop="@dimen/main_background_padding_top"
     android:textAlignment="center"
     tools:context=".view.MainActivity">
 
@@ -16,55 +16,53 @@
     <TextView
         android:id="@+id/locationT"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/location"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/location_text_size" />
 
     <TextView
         android:id="@+id/timeT"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="@dimen/time_height"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/time"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/time_text_size"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/weatherimageT"
-        android:layout_width="132dp"
-        android:layout_height="95dp"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:contentDescription="@string/weather" />
+        android:layout_width="@dimen/weather_image_width"
+        android:layout_height="81dp"
+        android:contentDescription="@string/weather"
+        app:srcCompat="@android:drawable/ic_delete" />
 
     <TextView
         android:id="@+id/weatherconditionT"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="40dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/weather"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/weather_text_size"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tempratureT"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/temp"
         android:textColor="@color/white"
-        android:textSize="60sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/temperature_size" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -247,7 +245,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="130dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -270,12 +268,12 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/uv"
-                android:contentDescription="@string/uv" />
+                android:contentDescription="@string/uv"
+                android:src="@drawable/uv" />
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -317,12 +315,12 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="62dp"
-                android:src="@drawable/visibility"
-                android:contentDescription="@string/vis" />
+                android:contentDescription="@string/vis"
+                android:src="@drawable/visibility" />
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -364,12 +362,12 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="64dp"
-                android:src="@drawable/feels_like"
-                android:contentDescription="@string/feels_like" />
+                android:contentDescription="@string/feels_like"
+                android:src="@drawable/feels_like" />
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -399,10 +397,6 @@
 
         </Space>
     </LinearLayout>
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="10dp"/>
 
     <TextView
         android:id="@+id/lastupdateT"
