--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:startColor="#9561a1"
-        android:endColor="#122259"
+        android:startColor="@color/bgStartColor"
+        android:endColor="@color/bgEndColor"
         android:type="linear"/>
 </shape>
